MAGETWO-42871: Storefront menu UI issues on mobile

--- a/app/design/frontend/Magento/blank/web/css/source/_navigation.less
+++ b/app/design/frontend/Magento/blank/web/css/source/_navigation.less
@@ -146,6 +146,9 @@
                 font-weight: 700;
                 padding: .8rem @indent__base;
             }
+            .header.links {
+                border: 0;
+            }
         }
     }
 
